--- a/index.html
+++ b/index.html
@@ -126,6 +126,9 @@
         <div class="black">&#9816</div>
         <div class="white">&#9814;</div>
     </div>
+    <a href="../day4 task2/index.html">task2</a>
+    <a href="../day 4 task 3.html/">task3</a>
 </body>
+
 
 </html>
